The end adaptive

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@ title: AVA-Group | Home
  <div class="add-post">
      <form class="add-post__form" action="/" method="post">
          <textarea class="add-post__textarea" name="post-text"
-             placeholder="Напишите что нибудь"></textarea>
+             placeholder="Напишите что-нибудь"></textarea>
          <div class="add-post__form_actions">
             <label class="add-post_file" for="add-post-file">
                 <input type="file" name="" id="add-post-file">
