--- a/src/post.html
+++ b/src/post.html
@@ -26,7 +26,7 @@ title: Post
         </a>
     </div>
     <div class="post__header">
-        <h1 class="post_title post_title--mb0">
+        <h1 class="post_title post_title--open">
             Как я сходил на FrontEnd Conf 2021
         </h1>
         <ul class="post__data">
