--- a/src/works.html
+++ b/src/works.html
@@ -7,8 +7,11 @@ title: Works
 
 <article class="work">
     <div class="work__preview">
-        <img src="/assets/images/work1.jpg"
-         alt="dsfsfkjksudf.ru">
+        <picture>
+            <source srcset="/assets/images/work1_mobile.jpg" media="(max-width: 575px)">
+            <img src="/assets/images/work1.jpg"
+            alt="dsfsfkjksudf.ru">
+        </picture>
     </div>
     <div class="work__content">
         <h2 class="work__title">
@@ -33,8 +36,10 @@ title: Works
 
 <article class="work">
     <div class="work__preview">
-        <img src="/assets/images/work2.jpg"
-         alt="dsfsfkjksudf.ru">
+        <picture>
+            
+            <img src="/assets/images/work2.jpg" alt="dsfsfkjksudf.ru">
+        </picture>
     </div>
     <div class="work__content">
         <h2 class="work__title">
