--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@ title: AVA-Group | Home
 ---
 <!-- Stories-->
 <div class="stories">
-    <div class="stories__item">
+    <div class="stories__item" data-modal="story-modal">
         <img class="stories__preview"
          src="/assets/images/stories/Stories_1.jpg" alt="">
          <div class="stories__title">Отдыхаю на природе</div>
@@ -37,7 +37,7 @@ title: AVA-Group | Home
  <div class="add-post">
      <form class="add-post__form" action="/" method="post">
          <textarea class="add-post__textarea" name="post-text"
-             placeholder="Напишите что-нибудь"></textarea>
+             placeholder="Напишите что-нибудь" data-autoresize></textarea>
          <div class="add-post__form_actions">
             <label class="add-post_file" for="add-post-file">
                 <input type="file" name="" id="add-post-file">
