--- a/src/post.html
+++ b/src/post.html
@@ -134,7 +134,8 @@ title: Post
             <h3 class="post__subtitle">Обсуждение</h3>
             <form class="form" action="/" method="post">
                <div class="form__group">
-                    <textarea class="form__control" name="comments-text" placeholder="Текст комментария"></textarea>
+                    <textarea class="form__control" name="comments-text" 
+                    placeholder="Текст комментария" data-autoresize></textarea>
                     <span class="form__line" ></span>
                 </div>    
                     <button class="btn btn--blue btn--comments" type="submit">Отправить</button>
